filters to format text, adjustments in sharing functionality, changes in the description of statistics, and correction in icon paths. Floating action buttons' visibility is now controlled through the app settings. These enhancements should improve user experience and code performance.

--- a/apps/dfda-1/public/app/public/templates/fragments/circle-page.html
+++ b/apps/dfda-1/public/app/public/templates/fragments/circle-page.html
@@ -15,7 +15,7 @@
         <p id="circle-page-title"
            ng-if="circlePage.title"
            style="font-size: 30px; line-height: 1;">
-            {{circlePage.title}}
+            {{ circlePage.title | wordAliases }}
         </p>
         <span id="circle-page-body-text"
               ng-if="circlePage.bodyText"
