--- a/apps/dfda-1/public/app/public/templates/fragments/help-info-card-fragment.html
+++ b/apps/dfda-1/public/app/public/templates/fragments/help-info-card-fragment.html
@@ -1,5 +1,5 @@
 <div class="card" ng-if="!helpCard.hide" id="{{helpCard.id}}" style="background-color: #2E294E; border-radius: 15px">
-    <div id="helpInfoCardHeader" 
+    <div id="helpInfoCardHeader"
          class="item item-avatar item-borderless"
          style="background-color: #2E294E; padding-left: 0; padding-right: 0; box-shadow: none;">
     <span style="position: absolute; top: 15px; left: 15px; font-size: 36px; max-width: 40px; max-height: 40px; width: 100%; border-radius: 4px;">
@@ -9,8 +9,8 @@
              ng-src="{{helpCard.image.url}}">
     </span>
         <span style="text-align: center; height: 40px; line-height: 40px; white-space: nowrap; font-family: 'Open Sans', sans-serif;">
-            <p ng-if="!platform.isMobile" style="font-size: 24px; color: white; ">{{helpCard.title}}</p>
-            <p ng-if="platform.isMobile" style="font-size: 18px; color: white; ">{{helpCard.title}}</p>
+            <p ng-if="!platform.isMobile" style="font-size: 24px; color: white; ">{{helpCard.title | wordAliases }}</p>
+            <p ng-if="platform.isMobile" style="font-size: 18px; color: white; ">{{helpCard.title | wordAliases }}</p>
         </span>
         <button id="closeButton" class="button button-clear button-assertive" ng-click="hideHelpCard(helpCard)"
                 style="position: absolute; top: 10px; right: 10px; font-size: 25px;"><i class="ion-close-round"></i>
@@ -18,7 +18,7 @@
     </div>
     <div class="item item-body item-borderless" style="padding-top: 5px; color: white; text-align: center;
      background-color: #2E294E; max-width: 500px; margin: 0 auto; font-size: 14px; font-family: 'Open Sans', sans-serif;">
-        {{helpCard.bodyText}}
+        {{helpCard.bodyText | wordAliases }}
     </div>
     <div ng-repeat="button in helpCard.buttons">
         <div class="row">
