--- a/apps/dfda-1/public/app/public/templates/fragments/select-subscription-plan-fragment.html
+++ b/apps/dfda-1/public/app/public/templates/fragments/select-subscription-plan-fragment.html
@@ -19,7 +19,7 @@
                 </md-radio-group>
                 <!--                <md-input-container class="md-block">
                                     &lt;!&ndash; Use floating placeholder instead of label &ndash;&gt;
-                                    <md-icon md-svg-public="img/material-icons/ic_card_giftcard_24px.svg"></md-icon>
+                                    <md-icon md-svg-src="img/material-icons/ic_card_giftcard_24px.svg"></md-icon>
                                     <input ng-model="coupon" placeholder="Coupon Code (optional)" ng-required="false">
                                 </md-input-container>-->
             </div>
