enhancing the readability and user experience. It also contains modifications in html structure to improve the layout of pages like import-data, measurement-add and more. Other changes include updates in button functionalities, refining css style attributes and removal of some redundant code elements.

--- a/apps/dfda-1/public/app/public/templates/card.html
+++ b/apps/dfda-1/public/app/public/templates/card.html
@@ -42,7 +42,7 @@
          alt="{{card.title}}"
          ng-if="card.image && platform.screen.height > 1000">
     <md-card-title id="card"
-                   style="padding-top: 0; padding-bottom: 2px;"
+                   style="padding-bottom: 2px;"
                    ng-if="card.title || card.subTitle">
         <md-card-title-text id="title-text">
             <span id="title"
@@ -66,7 +66,8 @@
     </md-card-content>-->
     <md-card-actions id="actions"
                      layout-align="center center"
-                     style="text-align: center; padding-top: 0;"
+                     style="text-align: center; padding-top: 0; display: flex; flex-direction: row; justify-content:
+                     center; flex-wrap: wrap;"
                      ng-if="card.buttons">
         <md-button id="{{button.id+'-text-button'}}"
                    ng-if="!button.image || button.ionIcon"
@@ -75,13 +76,13 @@
                    style="min-width: 0; padding-top: 0; padding-bottom: 0;"
                    ng-click="state.cardButtonClick(card, button, $event)">
             <md-tooltip ng-if="button.tooltip">{{button.tooltip}}</md-tooltip>
-            <span style="color: {{button.color}}">
+            <span style="padding: 5px; color: {{button.color}}">
                 <i class="icon {{button.ionIcon}}"
                    ng-if="button.ionIcon"></i>
                 <span ng-if="button.text && button.text !== ''"> &nbsp; {{button.text}}</span>
             </span>
         </md-button>
-        <md-button id="button-{{button.id}}"
+        <span id="button-{{button.id}}"
                    ng-if="button.image && !button.ionIcon"
                    ng-repeat="button in card.buttons"
                    aria-label="{{button.text || button.title || button.id}}"
@@ -90,7 +91,7 @@
             <md-tooltip>{{button.tooltip}}</md-tooltip>
             <img style="max-height: 75px; min-width:0; min-height:0; max-width: 100%;"
                  ng-src="{{button.image}}">
-        </md-button>
+        </span>
     </md-card-actions>
     <md-card-actions id="actions"
                      layout-align="center center"
@@ -137,7 +138,7 @@
                      hide-sm><!-- Spacer //--></div>
                 <md-input-container flex
                                     class="md-icon-float md-block md-title"
-                                    style="margin-top: 0; margin-bottom: 0;">
+                                    style="margin-bottom: 0; padding-left: 5px; padding-right: 5px;">
                     <label>{{inputField.displayName}}</label>
                     <input required
                            type="{{inputField.type}}"
@@ -153,6 +154,7 @@
                      hide-sm><!-- Spacer //--></div>
                 <!--<span flex="20" style="margin-top: 10px;" ng-if="inputField.labelRight"> &nbsp {{inputField.labelRight}}</span>-->
                 <md-button type="submit"
+                           style="text-align: right;"
                            flex="20">
                     Record {{inputField.submitButton.parameters.value}}
                 </md-button>
