--- a/apps/dfda-1/public/app/public/templates/chat-engine.html
+++ b/apps/dfda-1/public/app/public/templates/chat-engine.html
@@ -1,5 +1,5 @@
 <ion-view hide-nav-bar="false">
-    <ion-nav-title>{{state.title}}</ion-nav-title>
+    <ion-nav-title>{{ state.title | wordAliases }}</ion-nav-title>
     <ion-content scroll="true" overflow-scroll="true">
         <div class="container-fluid" ng-controller="chatAppController">
             <div class="row">
