--- a/apps/dfda-1/public/app/public/templates/measurement-add.html
+++ b/apps/dfda-1/public/app/public/templates/measurement-add.html
@@ -1,5 +1,5 @@
 <ion-view hide-nav-bar="hideNavigationMenu">
-    <ion-nav-title>{{state.title}}</ion-nav-title>
+    <ion-nav-title>{{ state.title | wordAliases }}</ion-nav-title>
     <ion-content ng-class="{ isBrowserView : platform.isWeb == true }">
         <div class="card"
              style="overflow: visible"
