--- a/apps/dfda-1/public/app/public/templates/chat.html
+++ b/apps/dfda-1/public/app/public/templates/chat.html
@@ -1,5 +1,5 @@
 <ion-view hide-nav-bar="false">
-    <ion-nav-title>{{state.title}}</ion-nav-title>
+    <ion-nav-title>{{ state.title | wordAliases }}</ion-nav-title>
     <ion-content scroll="true" overflow-scroll="true">
         <div id="splash-screen" class="splash-wrapper"
              style="width: 100%; position: absolute; height: 100%; z-index: -1;">
