--- a/apps/dfda-1/public/app/public/templates/favorites.html
+++ b/apps/dfda-1/public/app/public/templates/favorites.html
@@ -1,5 +1,5 @@
 <ion-view hide-nav-bar="hideNavigationMenu">
-    <ion-nav-title>{{state.title}}</ion-nav-title>
+    <ion-nav-title>{{ state.title | wordAliases }}</ion-nav-title>
     <ion-content>
         <ion-refresher on-refresh="refreshFavorites()"></ion-refresher>
         <div class="list card" ng-click="favoriteAddButtonClick()">
