--- a/apps/dfda-1/public/app/public/templates/feed.html
+++ b/apps/dfda-1/public/app/public/templates/feed.html
@@ -1,5 +1,5 @@
 <ion-view hide-nav-bar="false">
-    <ion-nav-title>{{state.title}}</ion-nav-title>
+    <ion-nav-title>{{ state.title | wordAliases }}</ion-nav-title>
     <ion-content scroll="true" overflow-scroll="true">
         <ion-refresher on-refresh="state.refreshFeed()"></ion-refresher>
         <md-progress-linear ng-show="state.loading" md-mode="indeterminate"></md-progress-linear>
