--- a/apps/dfda-1/public/app/public/templates/onboarding-page.html
+++ b/apps/dfda-1/public/app/public/templates/onboarding-page.html
@@ -33,7 +33,7 @@
                 </md-button>
                 <md-button id="hideOnboardingPage" class="button circle-page-button"
                            ng-if="circlePage.nextPageButtonText" ng-click="hideOnboardingPage()">
-                    <i class="ion-checkmark"> &nbsp; {{circlePage.nextPageButtonText}} &nbsp;</i>
+                    <i class="ion-checkmark"> &nbsp; {{circlePage.nextPageButtonText | wordAliases }} &nbsp;</i>
                 </md-button>
                 <md-button id="goToInboxButton" class="button circle-page-button"
                            ng-if="circlePage.id === 'allDoneCard'" ng-click="doneOnboarding()">
