--- a/apps/dfda-1/public/app/public/templates/outcomes-label-page.html
+++ b/apps/dfda-1/public/app/public/templates/outcomes-label-page.html
@@ -1,5 +1,5 @@
 <ion-view hide-nav-bar="hideNavigationMenu">
-    <ion-nav-title>{{state.title}}</ion-nav-title>
+    <ion-nav-title>{{ state.title | wordAliases }}</ion-nav-title>
     <ion-header-bar ng-if="showSearchFilterBox" class="bar-subheader item-input-inset">
         <label class="item-input-wrapper">
             <i class="icon ion-ios7-search placeholder-icon"></i>
