--- a/apps/dfda-1/public/app/public/templates/variable-search.html
+++ b/apps/dfda-1/public/app/public/templates/variable-search.html
@@ -1,123 +1,122 @@
 <ion-view hide-nav-bar="hideNavigationMenu">
-    <ion-nav-title>{{state.title}}</ion-nav-title>
+    <ion-nav-title>{{ state.title | wordAliases }}</ion-nav-title>
     <ion-content>
         <md-progress-linear md-mode="indeterminate"
                             ng-show="state.searching || showSearchLoader">
         </md-progress-linear>
-        <div id="variable-category-selector-card">
-            <label id="variable-category-selector-label"
-                class="item item-input item-select">
-                <div class="input-label-dark-bg"
-                     style="white-space:normal; width: 60%">Category Filter 👉
-                </div>
-                <select id="variable-category-selector"
-                        ng-model="state.variableSearchParameters.variableCategoryName"
-                        ng-change="onVariableSearch()"
-                >
-                    <option ng-repeat="variableCategoryName in variableCategoryNames"
-                            value="{{variableCategoryName}}">{{variableCategoryName}}
-                    </option>
-                </select>
-            </label>
-<!--            <div ng-show="state.helpText" class="item item-text-wrap"> {{state.helpText}}</div>-->
-        </div>
-        <div id="variable-search-input-container" class="search-input-container">
-            <label class="item item-input">
-                <i class="icon ion-search placeholder-icon"></i>
-                <input ng-model="state.variableSearchParameters.searchPhrase"
-                       ng-model-options="{ debounce: 500 }"
-                       ng-change="onVariableSearch()"
-                       id="variableSearchBox"
-                       type="search"
-                       placeholder={{state.variableSearchPlaceholderText}}>
-                <a style="font-size: 35px;" ng-if="state.variableSearchParameters.searchPhrase == '' && platform.isMobile"
-                   on-touch="scanBarcode()">
-                    <i class="icon ion-ios-camera placeholder-icon"></i>
-                    &nbsp
-                </a>
-                <a ng-if="state.variableSearchParameters.searchPhrase != ''" style="font-size: 30px;"
-                   on-touch="state.variableSearchParameters.searchPhrase=''; onVariableSearch()">
-                    <i class="icon ion-close-round placeholder-icon"></i>
-                    &nbsp
-                </a>
-            </label>
-        </div>
-        <div id="variable-search-results">
+        <div ng-include="'templates/fragments/help-info-card-fragment.html'"></div>
+	    <div ng-if="!state.noVariablesFoundCard.show ||
+	    state.searching ||
+		state.variableSearchParameters.includePublic">
+		    <div id="variable-category-selector-card">
+			    <label id="variable-category-selector-label"
+			           class="item item-input item-select">
+				    <div class="input-label-dark-bg"
+				         style="white-space:normal; width: 60%">Category Filter 👉
+				    </div>
+				    <select id="variable-category-selector"
+				            ng-model="state.variableSearchParameters.variableCategoryName"
+				            ng-change="onVariableSearch()"
+				    >
+					    <option ng-repeat="variableCategoryName in variableCategoryNames"
+					            value="{{variableCategoryName}}">{{variableCategoryName}}
+					    </option>
+				    </select>
+			    </label>
+			    <!--            <div ng-show="state.helpText" class="item item-text-wrap"> {{state.helpText}}</div>-->
+		    </div>
+		    <div id="variable-search-input-container" class="search-input-container">
+			    <label class="item item-input">
+				    <i class="icon ion-search placeholder-icon"></i>
+				    <input ng-model="state.variableSearchParameters.searchPhrase"
+				           ng-model-options="{ debounce: 500 }"
+				           ng-change="onVariableSearch()"
+				           id="variableSearchBox"
+				           type="search"
+				           placeholder={{state.variableSearchPlaceholderText}}>
+				    <a style="font-size: 35px;" ng-if="state.variableSearchParameters.searchPhrase == '' && platform.isMobile"
+				       on-touch="scanBarcode()">
+					    <i class="icon ion-ios-camera placeholder-icon"></i>
+					    &nbsp
+				    </a>
+				    <a ng-if="state.variableSearchParameters.searchPhrase != ''" style="font-size: 30px;"
+				       on-touch="state.variableSearchParameters.searchPhrase=''; onVariableSearch()">
+					    <i class="icon ion-close-round placeholder-icon"></i>
+					    &nbsp
+				    </a>
+			    </label>
+		    </div>
+		    <div id="variable-search-results">
 
-            <div id="search-loading"
-                 ng-show="state.searching || showSearchLoader"
-                 class="theme-color">
-                <i class="icon ion-search"></i>
-            </div>
-            <ion-list class>
-                <!--<ion-item ng-click="selectVariable(item)" ng-repeat="item in state.variableSearchResults | orderBy:'-latestMeasurementTime' | limitTo:5 | unique:'id'  ">-->
-                <ion-item id="variable-search-result-{{$index}}"
-                          class="glass variable-search-result"
-                          ng-click="selectVariable(item)"
-                          ng-repeat="item in state.variableSearchResults | unique:'name' track by $index">
-                    <div>
-                        <!-- For some reason, putting displayName on new line in HTML code also produces new line in rendered HTML even though there's no <br> -->
-                        <div class="search-result-title ">
-                            <img alt=""
-                                 style="max-height: 30px; float: left; margin-right: 5px;"
-                                 ng-src="{{ item.imageUrl }}"
-                                 class="icon"/>
-                            <!--<i ng-if="item.ionIcon" class="icon {{item.ionIcon}}"></i>-->
-                            <span style="font-size: 1.2rem"
-                              class="pulsating-glowing-text-disabled"
-                            >
+			    <div id="search-loading"
+			         ng-show="state.searching || showSearchLoader"
+			         class="theme-color">
+				    <i class="icon ion-search"></i>
+			    </div>
+			    <ion-list class>
+				    <!--<ion-item ng-click="selectVariable(item)" ng-repeat="item in state.variableSearchResults | orderBy:'-latestMeasurementTime' | limitTo:5 | unique:'id'  ">-->
+				    <ion-item id="variable-search-result-{{$index}}"
+				              class="glass variable-search-result"
+				              ng-click="selectVariable(item)"
+				              ng-repeat="item in state.variableSearchResults | unique:'name' track by $index">
+					    <div>
+						    <!-- For some reason, putting displayName on new line in HTML code also produces new line in rendered HTML even though there's no <br> -->
+						    <div class="search-result-title ">
+							    <img alt=""
+							         style="max-height: 30px; float: left; margin-right: 5px;"
+							         ng-src="{{ item.imageUrl }}"
+							         class="icon"/>
+							    <!--<i ng-if="item.ionIcon" class="icon {{item.ionIcon}}"></i>-->
+							    <span style="font-size: 1.2rem"
+							          class="pulsating-glowing-text-disabled"
+							    >
                                 {{ item.displayName }}
                             </span>
-                        </div>
-                        <small ng-if="item.subtitle">{{item.subtitle}}</small>
-                        <small ng-if="!item.subtitle && item.latestMeasurementTime">
-                            Recorded {{item.latestMeasurementTime | fromNow}} - {{item.numberOfRawMeasurements}} measurements
-                        </small>
-                    </div>
-                </ion-item>
-                <ion-item id="new-variable-button"
-                          ng-if="state.showAddVariableButton && !state.searching"
-                          class="glass variable-search-result"
-                          ng-click="addNewVariable()"> {{state.addNewVariableButtonText}}
-                </ion-item>
-            </ion-list>
-        </div>
+						    </div>
+						    <small ng-if="item.subtitle">{{item.subtitle}}</small>
+						    <small ng-if="!item.subtitle && item.latestMeasurementTime">
+							    Recorded {{item.latestMeasurementTime | fromNow}} - {{item.numberOfRawMeasurements}} measurements
+						    </small>
+					    </div>
+				    </ion-item>
+				    <ion-item id="new-variable-button"
+				              ng-if="state.showAddVariableButton && !state.searching"
+				              class="glass variable-search-result"
+				              ng-click="addNewVariable()"> {{state.addNewVariableButtonText}}
+				    </ion-item>
+			    </ion-list>
+		    </div>
+	    </div>
         <div class="list card"
-             ng-if="state.noVariablesFoundCard.show && !state.searching  && !$scope.state.variableSearchResults">
+             ng-if="state.noVariablesFoundCard.show && !state.searching">
             <div style="padding-bottom:10px;">
                 <div class="row">
                     <div class="span6" style="float: none; margin: 0 auto;">
-                        <p style="line-height: normal; font-size: 20px;"><i style="font-size: 30px;"
-                                                                            class="icon positive ion-android-sad"></i>
-                            &nbsp {{state.noVariablesFoundCard.title}}</p>
+                        <p style="line-height: normal; font-size: 20px;">
+	                        <i style="font-size: 30px;"
+	                           class="icon positive ion-android-sad">
+	                        </i>
+                            &nbsp {{state.noVariablesFoundCard.title}}
+                        </p>
                     </div>
                 </div>
                 <p style="text-align: center">
                     {{state.noVariablesFoundCard.body}}
                 </p>
-                <div class="row">
-                    <div class="button-bar">
-                        <button class="button button-clear button-balanced" style="font-size: 14px;"
-                                ng-click="goToStateFromVariableSearch('app.reminderSearch')">
-                            <i class="ion-android-notifications"> &nbsp; Add a reminder &nbsp;</i>
-                        </button>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="button-bar">
-                        <button class="button button-clear button-royal" style="font-size: 14px;"
-                                ng-click="goToStateFromVariableSearch('app.measurementAddSearch')">
-                            <i class="ion-compose"> &nbsp; Record a measurement &nbsp;</i>
-                        </button>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="button-bar">
-                        <button class="button button-clear button-calm" style="font-size: 14px;"
-                                ng-click="goToStateFromVariableSearch('app.import')">
-                            <i class="ion-ios-list-outline"> &nbsp; Import Your Data &nbsp;</i>
-                        </button>
-                    </div>
+                <div style="margin: auto; text-align: center;">
+	                <button class="button button-clear button-outline button-balanced"
+	                        style="font-size: 14px;"
+	                        ng-click="goToStateFromVariableSearch('app.reminderSearch')">
+		                <i class="ion-android-notifications"> &nbsp; Add a reminder &nbsp;</i>
+	                </button>
+                    <button class="button button-clear button-outline button-royal" style="font-size: 14px;"
+                            ng-click="goToStateFromVariableSearch('app.measurementAddSearch')">
+                        <i class="ion-compose"> &nbsp; Record a measurement &nbsp;</i>
+                    </button>
+                    <button class="button button-clear button-outline button-calm" style="font-size: 14px;"
+                            ng-click="goToStateFromVariableSearch('app.import')">
+                        <i class="ion-ios-list-outline"> &nbsp; Import Your Data &nbsp;</i>
+                    </button>
                 </div>
             </div>
         </div>
